--- a/hw-01.qmd
+++ b/hw-01.qmd
@@ -1,7 +1,9 @@
 ---
 title: "Homework 01"
 author: "INSERT YOUR NAME HERE"
-format: html
+format: 
+  html:
+    embed-resources: true
 toc: true
 ---
 
